--- a/style.css
+++ b/style.css
@@ -6,20 +6,18 @@ body {
 
 /* HEADER-------------------------- */
 
-/* Keep header on top when scrolling down */
-header {
-  position: sticky;
-  top: 0;
-  background: #2C3E50;
-}
-
 /* Navigation bar */
 .nav-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  /* Keep navbar on top when scrolling down */
+  position: sticky;
+  top: 0;
+  /* background: #2C3E50; */
+  background: #130d3b;
   color: #FFFFFF;
-  height: 80px;
+  height: 10vh;
 }
 
 /* Logo */
@@ -30,18 +28,18 @@ header {
   padding: 10px;
 }
 
+/* Logo icon */
+.logo-icon {
+  height: 7vh;
+}
+
 /* Logo text */
 .nav-logo p {
   margin: 0;
-  width: 130px;
+  width: 35vw;
   font-family: "Sofia", sans-serif;
-  font-size: 18px;
+  font-size: 2.5vh;
   line-height: 1.2;
-}
-
-/* Logo icon */
-.logo-icon {
-  width: 50px;
 }
 
 /* Hide the links in the navigation bar for mobile */
@@ -64,44 +62,68 @@ header {
   border-radius: 5px;
 }
 
-/* WELCOME SECTION-------------------------- */
-
-.welcome-section {
-  max-width: 640px;
-  margin-right: auto;
-  margin-left: auto;
-  padding: 20px 45px;
-  text-align: justify;
-  font-size: 15px;
+/* Hero image */
+header {
+  /* Hero image with a linear gradient to make it a little darker */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./assets/hero-image.jpg);
+  height: 50vh;
+  background-size: cover;
+  background-position: center;
+  color: #FFFFFF;
+  /* flexbox to center the headings on the image */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-/* Welcome heading */
-.welcome-section h1 {
-  font-family: "Galada", sans-serif;
+header div {
+  width: 80%;
+  max-width: 1000px;
   text-align: center;
-  font-size: 30px;
-  font-weight: 500;
+}
+
+header h1 {
+  font-family: "Galada", sans-serif;
+  font-size: 5vh;
+  font-weight: 400;
   line-height: 1.2;
+}
+
+header h2 {
+  font-size: 2.5vh;
+  font-weight: 200;
 }
 
 /* Main section----------------------------- */
 
-/* CSS grid on main container */
-.main-container {
+/* flexbox on the main section */
+.main-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  max-width: 1200px;
+  margin: 5vh auto 8vh auto;
+}
+
+.monthly-unicorn-text {
+  align-self: flex-start;
+  padding: 0 50px;
+  margin: 0;
+  color: #F53B98;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 18px;
+  font-weight: 800;
+}
+
+/* CSS grid on cards container */
+.cards-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   grid-template-rows: auto;
   gap: 30px;
   justify-items: center;
-  padding: 20px 40px 60px 40px;
-  /* To align the content in the center of page */
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1000px;
-}
-
-.monthly-unicorn-text {
-  display: none;
+  padding: 0 40px;
 }
 
 /* Each card is a flexbox */
@@ -145,7 +167,7 @@ figcaption {
   margin: 0;
   font-family: "Galada", sans-serif;
   color: #4e036e;
-  font-size: 26px;
+  font-size: 24px;
   font-weight: 500;
 }
 
@@ -250,14 +272,16 @@ figcaption {
 /* FOOTER----------------------------------- */
 
 footer {
-  background: #2C3E50;
+  background: #130d3b;
+  bottom: 0;
 }
 
 footer p {
   color: #f6f2f9;
   text-align: center;
-  font-size: 12px;
+  font-size: 1.5vh;
   padding: 30px;
+  margin: 0;
 }
 
 /* MEDIA QUERIES---------------------------- */
@@ -277,8 +301,10 @@ footer p {
   }
 
   /* decrease font sizes of the cards */
-  .card h2 {
-    font-size: 22px;
+
+  .monthly-unicorn-text {
+    font-size: 16px;
+    padding: 0 40px;
   }
 
   .card .description {
@@ -321,21 +347,14 @@ footer p {
 
 @media (min-width: 900px) {
 
-  /* Adjust logo text*/
-  .nav-logo p {
-    width: 140px;
-    font-size: 20px;
-  }
-
-  /* Adjust welcome text */
-  .welcome-section p {
-    font-size: 18px;
-  }
-
   /* Adjust monthly unicorn card*/
   .monthly-unicorn {
     padding: 40px;
     gap: 40px;
+  }
+
+  .monthly-unicorn h2 {
+    font-size: 28px;
   }
 
   .monthly-unicorn .info-container {
@@ -360,12 +379,6 @@ footer p {
 
 @media (min-width: 1024px) {
 
-  /* Make the logo text bigger and in one line */
-  .nav-logo p {
-    width: auto;
-    font-size: 26px;
-  }
-
   /* Hide the hamburge icon */
   .hamburger-icon {
     display: none;
@@ -379,8 +392,8 @@ footer p {
   .nav-links a {
     text-decoration: none;
     color: #FFFFFF;
-    padding: 30px 16px;
-    font-size: 18px;
+    padding: 3.8vh 1.2vw;
+    font-size: 2vh;
   }
 
   .nav-links a:hover {
