--- a/style.css
+++ b/style.css
@@ -96,6 +96,26 @@ header h2 {
 
 /* Main section----------------------------- */
 
+/* Style setion heading */
+.section-heading {
+  margin: 10vh auto 5vh auto;
+  max-width: 1200px;
+}
+
+.section-heading h2 {
+  font-size: 36px;
+  font-weight: 400;
+  font-family: "Galada", sans-serif;
+  text-align: center;
+  color: #130d3b;
+  margin: 0;
+}
+
+.section-heading hr {
+  border: 1px solid #130d3b;
+  margin: 10px 40px;
+}
+
 /* flexbox on the main section */
 .main-section {
   display: flex;
@@ -228,7 +248,7 @@ figcaption {
   display: none;
 }
 
-/* UNICORN OF THE MONTH */
+/* UNICORN OF THE MONTH ---------------------------*/
 
 /* Place the monthly unicorn card first in the grid*/
 .monthly-unicorn {
@@ -268,6 +288,84 @@ figcaption {
 .monthly-unicorn .button-book {
   display: initial;
 }
+
+/* BOOKING FORM------------------------------ */
+
+.form-section {
+  margin: 0 auto;
+  font-family: "Montserrat", sans-serif;
+  max-width: 1000px;
+}
+
+form {
+  background: #fff;
+  border: 1px solid #F53B98;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 30px;
+  margin: 40px;
+
+}
+
+.inputs-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.form-input-vertical {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+
+}
+
+.form-input-horizontal {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+  align-items: center;
+}
+
+
+.form-input-horizontal span {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+.form-section h3,
+h4,
+h5 {
+  margin-bottom: 0;
+}
+
+.form-section h3 {
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 600;
+  margin-top: 20px;
+}
+
+.form-section h4 {
+  font-size: 14px;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
+label {
+  font-size: 12px;
+}
+
+.form-section p {
+  margin: 0;
+  font-size: 12px;
+}
+
+
+
 
 /* FOOTER----------------------------------- */
 
@@ -339,6 +437,13 @@ footer p {
   /* Increase button font size */
   .monthly-unicorn .button-book {
     font-size: 16px;
+  }
+
+  /* change flex directions in booking form */
+  .inputs-container {
+    flex-direction: row;
+    gap: 20px;
+
   }
 
 }
