--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   z-index: 100;
   background: #130d3b;
   color: #FFFFFF;
-  height: 60px;
+  height: 80px;
   padding: 0 20px 0 5px;
 }
 
@@ -40,9 +40,9 @@ body {
 /* Logo text */
 .nav-logo p {
   margin: 0;
-  width: 40vw;
+  width: 50vw;
   font-family: "Sofia", sans-serif;
-  font-size: 18px;
+  font-size: 20px;
   line-height: 1.2;
 }
 
@@ -50,12 +50,11 @@ body {
 .menu a {
   text-decoration: none;
   color: #FFFFFF;
-  padding: 3.8vh 1.2vw;
-  font-size: 2vh;
+  font-size: 16px;
 }
 
 .menu a:hover {
-  background: #8AB6D6;
+  font-size: larger;
 }
 
 /* style the hamburger menu */
@@ -65,7 +64,7 @@ body {
   transform: translateY(-110%);
   /* to create a slideup/down effect */
   transition: transform 0.3s;
-  top: 7vh;
+  top: 60px;
   left: 0;
   right: 0;
   bottom: 0;
@@ -75,8 +74,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  gap: 5vh;
+  gap: 7vh;
   padding: 5vh 20px;
+  margin: 0;
 }
 
 /* style the hamburger icon */
@@ -125,7 +125,7 @@ body {
 header {
   /* Hero image with a linear gradient to make it a little darker */
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./assets/hero-image.jpg);
-  height: 50vh;
+  height: 80vh;
   background-size: cover;
   background-position: center;
   color: #FFFFFF;
@@ -139,17 +139,18 @@ header div {
   width: 80%;
   max-width: 900px;
   text-align: center;
+  margin-top: 10vh;
 }
 
 header h1 {
   font-family: "Galada", sans-serif;
-  font-size: 5vh;
+  font-size: 38px;
   font-weight: 400;
   line-height: 1.2;
 }
 
 header h2 {
-  font-size: 2.2vh;
+  font-size: 15px;
   font-weight: 200;
   margin-top: 8vh;
 }
@@ -616,7 +617,20 @@ footer p {
 
 /* Larger tablets */
 
-@media (min-width: 900px) {
+@media (min-width: 800px) {
+
+  /* Adjust font size in menu bar and header*/
+  .nav-logo p {
+    font-size: 24px;
+  }
+
+  header h1 {
+    font-size: 50px;
+  }
+
+  header h2 {
+    font-size: 20px;
+  }
 
   /* Adjust featured unicorn card*/
   .featured-unicorn {
@@ -660,11 +674,25 @@ footer p {
     position: static;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     transform: none;
     transition: none;
-    gap: 10px;
-    padding: 15px 0;
+    gap: 0;
+    padding: 0;
     background: none;
+  }
+
+  .menu a {
+    padding: 30px 20px;
+  }
+
+  .menu a:hover {
+    background: #8AB6D6;
+    font-size: 16px;
+  }
+
+  .nav-logo p {
+    width: 30vw;
   }
 
   /* change flex direction in booking form */
