--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   top: 0px;
   left: 0px;
   right: 0px;
-  z-index: 100;
+  z-index: 1;
   background: #130d3b;
   color: #FFFFFF;
   height: 80px;
@@ -60,6 +60,8 @@ body {
 /* style the hamburger menu */
 .menu {
   position: fixed;
+  /* z-index of -1 so the menu slides into place behind the nav-bar */
+  z-index: -1;
   /* to hide the menu by default above the screen */
   transform: translateY(-110%);
   /* to create a slideup/down effect */
@@ -193,7 +195,7 @@ header h2 {
   grid-template-rows: auto;
   gap: 30px;
   justify-items: center;
-  padding: 0 40px;
+  padding: 0 20px;
 }
 
 /* Each card is a flexbox */
@@ -553,43 +555,13 @@ footer p {
 
 /* MEDIA QUERIES---------------------------- */
 
-/* Small mobile devices */
+@media (min-width: 630px) {
 
-@media (max-width: 374px) {
-
-  /* Adjustments to keep the cards in the middle of the page */
-  .main-container {
-    padding-left: 0;
-    padding-right: 0;
+  /* change padding on cards container to keep one column */
+  .cards-container {
+    padding-left: 35px;
+    padding-right: 35px;
   }
-
-  .unicorn-card {
-    max-width: 260px;
-  }
-
-  /* decrease font sizes of the cards */
-
-  .unicorn-card .description {
-    font-size: 12px;
-  }
-
-  .unicorn-card .stat p {
-    font-size: 12px;
-  }
-
-  .unicorn-card .stat h3 {
-    font-size: 12px;
-  }
-
-  .unicorn-card .button {
-    font-size: 12px;
-  }
-
-  form {
-    margin: 25px;
-    padding: 20px;
-  }
-
 }
 
 /* Tablets */
